refactor/move person-directory over to CAS